# template-manager

./: .gitignore  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run.py
.cursor/rules/: general-project.mdc
app/: main.py  models.py  scanner.py
app/static/: style.css
app/templates/: index.html
